--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<h1>Hello, world!</h1>
+<!DOCTYPE html>
+<html>
+  <header>
+    <link href="https://fonts.googleapis.com/css2?family=Literata:wght@400;600&display=swap" rel="stylesheet">
+    <style>
+      body {
+        font-family: 'Literata', serif;
+      }
+    </style>
+  </header>
+  <body>
+    <h1>👋 Hello, world!</h1>
+    <p>
+      This is a place where I'll be testing new technologies and small projects.
+    </p>
+  </body>
+</html>
