Testing VS Codespaces

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <h1>👋 Hello, world!</h1>
     <p>
-      This is a place where I'll be testing new technologies and small projects.
+      This is a place where I'll be testing new technologies and small projects. You might also find some other things such as music and sports.
     </p>
   </body>
 </html>
